nohup.out
  File "bug_report.py", line 83
    wihile 1:
           ^
SyntaxError: invalid syntax
[master 3d5f7f4] 2016-12-09 18:45:00
 7 files changed, 1690 insertions(+), 7 deletions(-)
 create mode 100644 apkData/9054b1cc620dff012f610b9d0e664438.log
 create mode 100644 apkData/9054b1cc620dff012f610b9d0e664438.xml
 create mode 100644 nohup.out
To github.com:youngsheldon/hn_data.git
   8c5f61a..3d5f7f4  master -> master
[master 9be8d6a] 2016-12-10 18:45:13
 12 files changed, 3800 insertions(+), 218 deletions(-)
 create mode 100644 apkData/676e8d8893437e32822d1c9712253b3b.log
 create mode 100644 apkData/676e8d8893437e32822d1c9712253b3b.xml
 create mode 100644 apkData/99f244a9c56ad0dc63c13a21da245870.log
 create mode 100644 apkData/99f244a9c56ad0dc63c13a21da245870.xml
 create mode 100644 apkData/fe7d2790cb50c81794bff5fddae77ac6.log
 create mode 100644 apkData/fe7d2790cb50c81794bff5fddae77ac6.xml
To github.com:youngsheldon/hn_data.git
   3d5f7f4..9be8d6a  master -> master
[master a2e1985] 2016-12-11 18:45:21
 13 files changed, 767 insertions(+), 393 deletions(-)
 create mode 100644 apkData/b3f650db4dc5acfbe03c9df01ee6c856.log
 create mode 100644 apkData/b3f650db4dc5acfbe03c9df01ee6c856.xml
 create mode 100644 apkData/e00629ed71f19b2a2b7c758b1a9a90b2.log
 create mode 100644 apkData/e00629ed71f19b2a2b7c758b1a9a90b2.xml
 create mode 100644 apkData/f844f438c57bde81151c15f1fa73043d.log
 create mode 100644 apkData/f844f438c57bde81151c15f1fa73043d.xml
To github.com:youngsheldon/hn_data.git
   9be8d6a..a2e1985  master -> master
[master b3b3072] 2016-12-12 18:10:07
 22 files changed, 1127 insertions(+), 391 deletions(-)
 create mode 100644 apkData/03d5b5660f95af12fde02c0f7621559b.log
 create mode 100644 apkData/03d5b5660f95af12fde02c0f7621559b.xml
 create mode 100644 apkData/2dc308f7fdfaf91bf61669c2c4e1d372.log
 create mode 100644 apkData/2dc308f7fdfaf91bf61669c2c4e1d372.xml
 create mode 100644 apkData/374b9fe85801c7cac7c613a2043cef09.log
 create mode 100644 apkData/374b9fe85801c7cac7c613a2043cef09.xml
 create mode 100644 apkData/484e78f4680c8304cdb471e671f4120f.log
 create mode 100644 apkData/484e78f4680c8304cdb471e671f4120f.xml
 create mode 100644 apkData/7ada2aa8f88f8e262c9264eef0364645.log
 create mode 100644 apkData/7ada2aa8f88f8e262c9264eef0364645.xml
 create mode 100644 apkData/83e0ec8c84ba9e9b40ae25e860fb84bd.log
 create mode 100644 apkData/83e0ec8c84ba9e9b40ae25e860fb84bd.xml
 create mode 100644 apkData/a6617f4fe214f12c1df37e311898bad9.log
 create mode 100644 apkData/a6617f4fe214f12c1df37e311898bad9.xml
 create mode 100644 apkData/e4e5d9c2ac1800f6dcce405509c73678.log
 create mode 100644 apkData/e4e5d9c2ac1800f6dcce405509c73678.xml
To github.com:youngsheldon/hn_data.git
   d3b40d1..b3b3072  master -> master
[master a37bc43] 2016-12-13 18:10:25
 15 files changed, 1098 insertions(+), 347 deletions(-)
 create mode 100644 apkData/61647400656ec120fdfc6e97c18dd406.log
 create mode 100644 apkData/61647400656ec120fdfc6e97c18dd406.xml
 create mode 100644 apkData/d180f4deaf84b27b83a67f460e815782.log
 create mode 100644 apkData/d180f4deaf84b27b83a67f460e815782.xml
 create mode 100644 apkData/d7545d0b7be2c912b921176e34ffa87b.log
 create mode 100644 apkData/d7545d0b7be2c912b921176e34ffa87b.xml
 create mode 100644 apkData/e00d553ece1a34104849135f549061db.log
 create mode 100644 apkData/e00d553ece1a34104849135f549061db.xml
To github.com:youngsheldon/hn_data.git
   b3b3072..a37bc43  master -> master
[master d006b43] 2016-12-14 18:10:39
 20 files changed, 1231 insertions(+), 643 deletions(-)
 create mode 100644 apkData/2991b4bdfecd59da6a67c9ef923f076e.log
 create mode 100644 apkData/2991b4bdfecd59da6a67c9ef923f076e.xml
 create mode 100644 apkData/4c037c661c5b76141c451c51dd2acf47.log
 create mode 100644 apkData/4c037c661c5b76141c451c51dd2acf47.xml
 create mode 100644 apkData/6bb04c2fbd0f26cd20d5539117410cf9.log
 create mode 100644 apkData/6bb04c2fbd0f26cd20d5539117410cf9.xml
 create mode 100644 apkData/7002a8e89a97d2dfdde408e1cf275fe6.log
 create mode 100644 apkData/7002a8e89a97d2dfdde408e1cf275fe6.xml
 create mode 100644 apkData/c314b50b19b69fa1ab9368d161d631b5.log
 create mode 100644 apkData/c314b50b19b69fa1ab9368d161d631b5.xml
 create mode 100644 apkData/f7106f9a6de280d159b3edb22776377c.log
 create mode 100644 apkData/f7106f9a6de280d159b3edb22776377c.xml
To github.com:youngsheldon/hn_data.git
   a37bc43..d006b43  master -> master
[master d5179b2] 2016-12-15 18:11:03
 14 files changed, 3268 insertions(+), 218 deletions(-)
 create mode 100644 apkData/59c79cbfa39bbf973e5fe622c0f9b8ac.log
 create mode 100644 apkData/59c79cbfa39bbf973e5fe622c0f9b8ac.xml
 create mode 100644 apkData/63318917e94d019c77022b445ed58583.log
 create mode 100644 apkData/63318917e94d019c77022b445ed58583.xml
 create mode 100644 apkData/8abdb5f2697277d6ab6b7d806e456f5a.log
 create mode 100644 apkData/8abdb5f2697277d6ab6b7d806e456f5a.xml
 create mode 100644 apkData/d6212c6c0ad9799775bec843214e2592.log
 create mode 100644 apkData/d6212c6c0ad9799775bec843214e2592.xml
To github.com:youngsheldon/hn_data.git
   d006b43..d5179b2  master -> master
[master d8a68d7] 2016-12-16 18:11:45
 13 files changed, 3868 insertions(+), 412 deletions(-)
 create mode 100644 apkData/268edcff3812f9a2b469cfe05a6bbbd1.log
 create mode 100644 apkData/268edcff3812f9a2b469cfe05a6bbbd1.xml
 create mode 100644 apkData/932867589b53cf74563c7d6c28747f24.log
 create mode 100644 apkData/932867589b53cf74563c7d6c28747f24.xml
 create mode 100644 apkData/d418b8a334f3a082741c8e1696b0f194.log
 create mode 100644 apkData/d418b8a334f3a082741c8e1696b0f194.xml
To github.com:youngsheldon/hn_data.git
   d5179b2..d8a68d7  master -> master
[master 25bdf41] 2016-12-17 18:12:17
 21 files changed, 7571 insertions(+), 626 deletions(-)
 create mode 100644 apkData/33202df82562165e8e62bcf2cdff568e.log
 create mode 100644 apkData/33202df82562165e8e62bcf2cdff568e.xml
 create mode 100644 apkData/3946f1450725298be19281d94f599c92.log
 create mode 100644 apkData/3946f1450725298be19281d94f599c92.xml
 create mode 100644 apkData/43af8b2e8e86141b7e0f075870823405.log
 create mode 100644 apkData/43af8b2e8e86141b7e0f075870823405.xml
 create mode 100644 apkData/6d3547c1670f56eb6e29250e5d17d135.log
 create mode 100644 apkData/6d3547c1670f56eb6e29250e5d17d135.xml
 create mode 100644 apkData/83e33c7735a07bb5458070b9337b1919.log
 create mode 100644 apkData/83e33c7735a07bb5458070b9337b1919.xml
 create mode 100644 apkData/89f160453fd0bfa1776356d866bae482.log
 create mode 100644 apkData/89f160453fd0bfa1776356d866bae482.xml
 create mode 100644 apkData/92f8bea1da3439c28ba88a33dc210127.log
 create mode 100644 apkData/92f8bea1da3439c28ba88a33dc210127.xml
To github.com:youngsheldon/hn_data.git
   d8a68d7..25bdf41  master -> master
